<resources>
    <string name="app_id">nock-lepow</string>
    <string name="app_name">Nock</string>
    <string name="title_scoring">Scoring</string>
    <string name="title_team">Team</string>
    <string name="welcome">Welcome to &lt;nock!</string>

    <!--Start Scoring Names-->
    <string name="newScoring">New Scoring Round</string>
    <string name="previousScoring">View Previous Scoring Rounds</string>
    <string name="division">Division</string>
    <string name="distance">Distance</string>
    <string name="target">Target Size</string>
    <string name="numEnds">Number of Ends</string>
    <string name="defaultEnds">10</string>
    <string name="arrows_per_end">Arrows Per End</string>
    <string name="preset_test_button">Preset Test Button</string>
    <string name="scoringRound">Scoring Round</string>
    <!--End Scoring Names-->
    <string-array name="divisions_array">
        <item>Barebow</item>
        <item>Recurve</item>
        <item>Bowhunter</item>
        <item>Compound</item>
    </string-array>
    <string-array name="distances_array">
        <item>10m</item>
        <item>18m</item>
        <item>30m</item>
        <item>50m</item>
        <item>70m</item>
    </string-array>
    <string-array name="targets_array">
        <item>40cm</item>
        <item>60cm</item>
        <item>80cm</item>
        <item>122cm</item>
    </string-array>
    <string-array name="arrows_per_end_array">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
    </string-array>
</resources>
