<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/loadPresetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Load From Preset"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/divisionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loadPresetButton"
            android:layout_alignLeft="@+id/divisionSpinner"
            android:text="@string/division"/>

        <Spinner
            android:id="@+id/divisionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divisionLabel">
        </Spinner>

        <TextView
            android:id="@+id/distanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divisionSpinner"
            android:text="@string/distance"
            android:layout_toLeftOf="@+id/targetLabel"
            android:layout_alignLeft="@+id/distanceSpinner"/>

        <Spinner
            android:id="@+id/distanceSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distanceLabel"
            android:layout_toLeftOf="@+id/targetSpinner"
            android:layout_alignParentLeft="true">
        </Spinner>

        <TextView
            android:id="@+id/targetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divisionSpinner"
            android:text="@string/target"
            android:layout_alignLeft="@+id/targetSpinner" />

        <Spinner
            android:id="@+id/targetSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/targetLabel"
            android:layout_alignParentRight="true">
        </Spinner>

        <TextView
            android:id="@+id/numEndsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numEnds"
            android:layout_below="@+id/targetSpinner"/>

        <Button
            android:id="@+id/decreaseEnds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="20sp"
            android:layout_below="@+id/numEndsLabel"
            android:layout_toLeftOf="@+id/numEnds"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/numEnds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultEnds"
            android:layout_below="@+id/numEndsLabel"
            android:textSize="60sp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/increaseEnds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="20sp"
            android:layout_below="@+id/numEndsLabel"
            android:layout_toRightOf="@+id/numEnds"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/arrowPerEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/arrowSpinner"
            android:layout_below="@+id/numEnds"
            android:text="@string/arrows_per_end"/>

        <Spinner
            android:id="@+id/arrowSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrowPerEndLabel"
            android:layout_alignParentLeft="true">
        </Spinner>

        <CheckBox
            android:id="@+id/notesCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/arrowSpinner"
            android:layoutDirection="rtl"
            android:layout_marginVertical="16dp"
            android:text="Include Ability to Add Notes?"
            android:onClick="notesCheckboxClicked"/>

        <Button
            android:id="@+id/saveAsPresetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notesCheckbox"
            android:layout_margin="40dp"
            android:text="Save as Preset"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/startScoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:fabSize="normal"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="64dp">
        </android.support.design.widget.FloatingActionButton>

    </RelativeLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />




</android.support.constraint.ConstraintLayout>